--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,6 +42,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  @apply min-h-screen flex flex-col overflow-hidden;
 }
 @supports (overflow: clip) {
   .wrapper {
