--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -649,8 +649,9 @@ input::-webkit-inner-spin-button {
 }
 
 .description__input {
-  @apply min-h-[115px] h-auto rounded-md w-full block p-[14px] text-[14px] !outline !outline-border bg-[#f8fbff];
+  @apply min-h-[115px] h-auto rounded-md w-full block p-[14px] text-[14px] outline outline-border bg-[#f8fbff];
 }
+
 .description__input ul {
   @apply list-disc pl-[20px] mt-[20px] mb-0;
 }
